# Programa-de-Convivencia-Espacial

./: .gitignore  GDD.md  README.md  architecture.md  assets.md
assets/game/music/Entrance/: Entrada a la estación.aup  Entrada a la estación.mscz  entrance.mp3 - Acceso directo.lnk
assets/game/music/Entrance/Entrada a la estación_data/e08/d08/: e08080a5.au  e08080b0.au  e08080b2.au  e08080e0.au  e0808134.au  e080822a.au  e0808330.au  e08083b4.au  e0808600.au  e08086a5.au  e08086b1.au  e0808775.au  e08087f4.au  e08088e8.au  e080897d.au  e0808a5a.au  e0808b0b.au  e0808ba6.au  e0808c7f.au  e0808cb8.au  e0808cc2.au  e0808f75.au
assets/game/music/Gym/: Gym.mscz
assets/game/music/Living room/: .Living_room - copia.mscz,  .Living_room.mscz,  Living_room - copia.mscz  Living_room.aup  Living_room.mscz  livingRoom.mp3 - Acceso directo.lnk
assets/game/music/Living room/Living_room_data/e08/d08/: e08081bc.au  e080822c.au  e0808246.au  e08082c3.au  e08083cf.au  e08083fc.au  e0808479.au  e08084fb.au  e08085fa.au  e080877e.au  e0808839.au  e080884e.au  e0808927.au  e08089bb.au  e0808a2b.au  e0808a4c.au  (+6 more)
assets/game/music/Main menu/: .main menu.mscz,  Main menu.aup  Main menu.mp3 - Acceso directo.lnk  main menu.mscz
assets/game/music/Presentación hito 2/: hito 2.aup  hito 2.mscz
assets/game/music/Song 2/: Song_2.mscz
assets/game/textures files to update/: EmptyProgressBar2.psd  ProgressBar.psd  lifes.psd  playerAnimLobby.psd
assets/game/tilemaps/: BaseTileMaps.tmx  BoilerRoom.json  GardenRoom.json  GymRoom.json  LivingRoom.json  MenuRoom.json  SalaDeEstar.json  TD_TilemapBit.json  TD_TilemapBitCSV - copia.json  TD_TilemapBitCSV.json  TutorialRoom.json  dungeon_ts.json  mapaPrueba.json  murosExterior.json  murosPrueba1.tmx  tanks_showdown.json
docs/: cremosini.jfif  index.html
docs/assets/css/: main.css
music/: .videojuego.mscz,  videojuego.mscz
music/Main menu/: Main menu.aup
music/Main menu/Main menu_data/e08/d08/: e080801c.au  e0808071.au  e08080f2.au  e0808135.au  e08081bc.au  e0808207.au  e080835d.au  e08084ab.au  e08085b5.au  e08085ea.au  e0808601.au  e080860d.au  e0808689.au  e0808709.au  e080876a.au  e0808820.au  e080887e.au  e080888a.au  e0808a78.au  e0808a99.au  e0808aad.au  e0808ae0.au  e0808b64.au  e0808d16.au  e0808d2b.au  e0808de2.au  e0808f3e.au  e0808fb7.au
src/: CMakeLists.txt  CodingGuidelines.md  Collider.cpp  Collider.h  Component.h  ComponentType.h  Constants.h  Documentation.md  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Font.h  Health.cpp  Health.h  PCE_Project.cpp  PCE_Project.rc  PCE_Project.sln  PCE_Project.vcxproj  PCE_Project.vcxproj.filters  PlayState.cpp  PlayState.h  Resource.h  Resources.cpp  Resources.h  SDLAudioManager.h  SDLFontsManager.h  SDLTexturesManager.cpp  SDLTexturesManager.h  SDL_Game.cpp  SDL_Game.h  SDL_macros.h  Texture.h  Transform.h  Vector2D.cpp  Viewer.cpp  Viewer.h  run.sh  windowConfig.json
src/Box2D/include/box2d/: b2_math.h
src/Box2D/lib/: box2d.lib
src/Box2D/lib/Debug_lib/: box2d.lib
src/Box2D/lib/Release_lib/: box2d.lib
src/CMake/: FindBox2D.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
src/SDL2-2.0.10/lib/x64/: windowConfig.json
src/SourceFiles/: AbstractAnimatedViewers.cpp  AbstractAnimatedViewers.h  AbstractTimedGameMode.cpp  AbstractTimedGameMode.h  AbstractViewers.cpp  AbstractViewers.h  ActionableWeapon.cpp  ActionableWeapon.h  AdvancedAnimatedViewer.cpp  AdvancedAnimatedViewer.h  AnimatedPlayer.cpp  AnimatedPlayer.h  AnimatedUIViewer.cpp  AnimatedUIViewer.h  AnimatedViewer.cpp  AnimatedViewer.h  AnimationLoop.cpp  AnimationLoop.h  AttachableObject.cpp  AttachableObject.h  AttachesToObjects.cpp  AttachesToObjects.h  BananaPool.cpp  BananaPool.h  BananaWeapon.cpp  BananaWeapon.h  BodyPool.cpp  BodyPool.h  BoilerButtonLogic.cpp  BoilerButtonLogic.h  Bullet.cpp  Bullet.h  BulletPool.cpp  BulletPool.h  CapitalismGameMode.cpp  CapitalismGameMode.h  CarnivorousPlant.cpp  CarnivorousPlant.h  CarnivorousPlantViewer.cpp  CarnivorousPlantViewer.h  (+202 more)
src/config/: constants.json  gamecontrollerdb.txt  inputMapping.json
src/enc_temp_folder/458ed61cbd876817e451eaad29e6f91/: PlayState.cpp
src/tileson/: CMakeLists.txt  MyCMakeLists.txt  TilesonConfig.h
src/tileson/include/: TilesonConfig.h
src/tileson/include/objects/: Property.h
src/tileson/lib/: tileson.lib
(+42 files in other folders)
